--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'variables';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
+body {box-sizing: border-box; margin: 0; padding: 0;}
+body, input, select, textarea {font-family: $font;}
