--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header class="header">
+  <div class="header-top">
+    <nav class="header-top-nav container">
+      <top-navigation></top-navigation>
+    </nav>
+  </div>
+  <div class="header-middle"></div>
+  <div class="header-bottom">
+    <nav class="header-bottom-nav container">
+      <navigation></navigation>
+    </nav>
+  </div>
+</header>
